<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.livelife.pioalert.SigninActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/signin_bg_600"
            android:scaleType="centerCrop"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:text="@string/inizia_a_risparmiare"
            android:layout_above="@+id/fbButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp"/>



        <LinearLayout
            android:clickable="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:background="#255C97"
            android:layout_above="@+id/gButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/sign_in_facebook"
            android:gravity="center"
            android:id="@+id/fbButton">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/signin_facebook"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/sign_in_facebook"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:text="PROMO CODE"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                />

            <EditText
                android:hint="es. j34h5kj3h"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:padding="9dp"
                android:background="@drawable/round_corners"
                android:id="@+id/coderef"
                android:inputType="text"
                android:layout_width="130dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:background="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/gButton"
            android:gravity="center">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/signin_google"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4A4A4A"
                android:textSize="16sp"
                android:text="@string/sign_in_google"/>

        </LinearLayout>


    <ProgressBar
        android:visibility="gone"
        android:layout_margin="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgress"

        />


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/signin_logo_pio"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
